@@ -85,6 +85,12 @@ public class GCMIntentService extends GCMBaseIntentService {
                 PendingIntent.getActivity(context, 0, notificationIntent, 0);
         notification.setLatestEventInfo(context, title, message, intent);
         notification.flags |= Notification.FLAG_AUTO_CANCEL;
+        
+        //notification.defaults|= Notification.DEFAULT_SOUND;
+        //notification.defaults|= Notification.DEFAULT_LIGHTS;
+        //notification.defaults|= Notification.DEFAULT_VIBRATE;
+        notification.defaults = Notification.DEFAULT_ALL;
+        
         notificationManager.notify(0, notification);
     }
 
